--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>gkhelp</title><link href="/css/about.bbb9314a.css" rel="prefetch"><link href="/js/about.637eb0a0.js" rel="prefetch"><link href="/css/app.4ce26b67.css" rel="preload" as="style"><link href="/css/chunk-vendors.0828f29b.css" rel="preload" as="style"><link href="/js/app.83f7749e.js" rel="preload" as="script"><link href="/js/chunk-vendors.6c0a416b.js" rel="preload" as="script"><link href="/css/chunk-vendors.0828f29b.css" rel="stylesheet"><link href="/css/app.4ce26b67.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but gkhelp doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.6c0a416b.js"></script><script src="/js/app.83f7749e.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" href="https://lkkkk520.github.io/gkb/favicon.ico">
+  <title>gkhelp</title>
+  <link href="https://lkkkk520.github.io/gkb/css/about.bbb9314a.css" rel="prefetch">
+  <link href="https://lkkkk520.github.io/gkb/js/about.637eb0a0.js" rel="prefetch">
+  <link href="https://lkkkk520.github.io/gkb/css/app.4ce26b67.css" rel="preload" as="style">
+  <link href="https://lkkkk520.github.io/gkb/css/chunk-vendors.0828f29b.css" rel="preload" as="style">
+  <link href="https://lkkkk520.github.io/gkb/js/app.83f7749e.js" rel="preload" as="script">
+  <link href="https://lkkkk520.github.io/gkb/js/chunk-vendors.6c0a416b.js" rel="preload" as="script">
+  <link href="https://lkkkk520.github.io/gkb/css/chunk-vendors.0828f29b.css" rel="stylesheet">
+  <link href="https://lkkkk520.github.io/gkb/css/app.4ce26b67.css" rel="stylesheet">
+</head>
+
+<body><noscript><strong>We're sorry but gkhelp doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong></noscript>
+  <div id="app"></div>
+  <script src="https://lkkkk520.github.io/gkb/js/chunk-vendors.6c0a416b.js"></script>
+  <script src="https://lkkkk520.github.io/gkb/js/app.83f7749e.js"></script>
+</body>
+
+</html>
