--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" href="https://lkkkk520.github.io/gkb/favicon.ico">
   <title>gkhelp</title>
   <link href="https://lkkkk520.github.io/gkb/css/about.bbb9314a.css" rel="prefetch">
